try fix: top of newsBox cropped on iOS Safari
(because iOS misinterprets vh)

--- a/styles/style.css
+++ b/styles/style.css
@@ -150,18 +150,19 @@ svg {
     overflow: visible;
     bottom:0;
     /* top:calc(100vh - 5rem); */
-    margin-left: auto;
-    margin-right: auto;
     width: calc(100% - 2rem);
     height: 0;
+    margin: 0 auto;
     max-width: 60rem;
-    padding: 1rem 0;
+    padding: 0;
     text-align: center;
 }
 
 #newsBoxContent {
     position: relative;
-    bottom: /* placeholder */ calc(-100vh);
+    top: /* placeholder */ 0;
+    height: /* placeholder */ calc(100vh - 2rem);
+    width: calc(100vw - 2rem);
     opacity: /* placeholder */ 1;
     transition: all /* transition-duration = placeholder */300ms ease-in-out 0ms;
     background: rgba(255,255,255,.95);
@@ -169,8 +170,6 @@ svg {
     border: 1px solid black;
     border-top: .67rem solid black;
     cursor: url("data:image/svg+xml,%3Csvg width='32' height='32' viewBox='0 0 8 8' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' xml:space='preserve' xmlns:serif='http://www.serif.com/' style='fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;'%3E%3Ccircle cx='3.84' cy='3.84' r='3.84' style='fill:%23fff;' /%3E%3Cpath d='M3.84,0c2.119,0 3.84,1.721 3.84,3.84c0,2.119 -1.721,3.84 -3.84,3.84c-2.119,0 -3.84,-1.721 -3.84,-3.84c0,-2.119 1.721,-3.84 3.84,-3.84Zm0,0.5c1.843,0 3.34,1.497 3.34,3.34c0,1.843 -1.497,3.34 -3.34,3.34c-1.843,0 -3.34,-1.497 -3.34,-3.34c0,-1.843 1.497,-3.34 3.34,-3.34Z' /%3E%3Cpath d='M4.823,5.507l-0,0.625l-1.805,-0l0,-0.625l0.558,-0l-0,-2.318l-0.558,-0l0,-0.629l1.261,0l0,2.947l0.544,-0Z' /%3E%3Cpath d='M4.32,1.681c-0,0.115 -0.042,0.215 -0.126,0.299c-0.084,0.084 -0.183,0.126 -0.299,0.126c-0.115,-0 -0.214,-0.042 -0.296,-0.126c-0.081,-0.084 -0.122,-0.184 -0.122,-0.299c0,-0.116 0.041,-0.216 0.122,-0.299c0.082,-0.084 0.181,-0.126 0.296,-0.126c0.12,-0 0.221,0.041 0.303,0.122c0.081,0.082 0.122,0.183 0.122,0.303Z' /%3E%3C/svg%3E") 16 16, pointer;
-    width: calc(100vw - 2rem);
-    height: calc(100vh - 2rem);
 }
 #newsBoxContent.bad {
     background-color: var(--fire);
